update First page & Password-Generator

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>My Page</title>
 </head>
 <body>
     <div id="header">
@@ -14,6 +14,7 @@
     </div>
 
     <div id="content">
+        <!--
         <div class="block">
             <img src="thumbnails/horse-power.png" alt="Horse-Power" style="width: 315px; height:200px">
 
@@ -49,7 +50,23 @@
                 <p class="description">Проект для изучения js</p>
             </div>
         </div>
-
-    </div>
+        -->
+        <ul>
+            <li>
+                <a href="Horse-Power/index.html">Horse-Power</a>
+            </li>
+            <li>
+                <a href="PDL-Auto/index.html">PDL-Auto</a>
+            </li>
+            <li>
+                <a href="JS-projects/Clicker/index.html">Mini-clicker</a>
+            </li>
+            <li>
+                <a href="JS-projects/Timer/index.html">Timer</a>
+            </li>
+            <li>
+                <a href="JS-projects/Password-Generator/index.html">Password-Generator</a>
+            </li>
+        </ul>
 </body>
 </html>
