--- a/JS-projects/Password-Generator/index.html
+++ b/JS-projects/Password-Generator/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="themes.css">
     <title>Document</title>
 </head>
 <body>
+    <div id="themes" onclick="changeTheme()"></div>
+
     <div>
         <h1 style="text-align: center;">JS course</h1>
         <h2 style="text-align: center;">password generator</h2>
@@ -49,5 +52,6 @@
 
 
     <script src="generatorScript.js"></script>
+    <script src="themesScript.js"></script>
 </body>
 </html>
