--- a/index.html
+++ b/index.html
@@ -1,72 +1,94 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>GiveMePass</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>My Page</title>
 </head>
+
 <body>
-    <div id="header">
-        <h1 id="welcome">Welcome to my page!</h1>
-        <p id="hereYouCanSee">Here you can see my web development projects</p>
+    <div class="container-outline">
+        <div class="center-container">
+            <div class="content row">
+
+                <div class="content-center">
+                    <span id="label">
+                        GiveMePass
+                    </span>
+                </div>
+
+                <div class="content-center">
+                    <span id="description">
+                        Create strong passwords that no one can break!
+                    </span>
+                </div>
+
+                <div class="top-container">
+                    <input id="inputPassword" class="form-control">
+                    <button class="btn btn-secondary" id="generate-btn" onclick="generate()">
+                        <div class="material-icons">refresh</div>
+                    </button>
+
+                    <div id="popup-container">
+                        <div id="popup-content">
+                            <span>Copied!</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="options">
+                    <div class="option">
+                        <span>Length</span>
+                        <input type="range" id="range" onchange="counterUpdate()" value="12" min="1" max="40">
+                        <span id="counter">12</span>
+                    </div>
+
+                    <div class="option">
+                        <span>Uppercases (A-Z)</span>
+                        <input type="checkbox" id="upper" checked>
+                    </div>
+                    <div class="option">
+                        <span>Numbers (0-9)</span>
+                        <input type="checkbox" id="numbers" checked>
+                    </div>
+                    <div class="option">
+                        <span>Symbols (&#@$)</span>
+                        <input type="checkbox" id="symbols" checked>
+                    </div>
+                </div>
+
+                <footer>
+                    <div>
+                        <span class="material-icons">lock</span>
+                        <span>Guaranteed security</span>
+                    </div>
+                    <div>
+                        <span class="material-icons">policy</span>
+                        <span>Privacy friendly</span>
+                    </div>
+                    <div>
+                        <span class="material-icons">visibility_off</span>
+                        <span>No data tracking</span>
+                    </div>
+                </footer>
+            </div>
+        </div>
     </div>
 
-    <div id="content">
-        <!--
-        <div class="block">
-            <img src="thumbnails/horse-power.png" alt="Horse-Power" style="width: 315px; height:200px">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
-            <div class="data">
-                <a href="Horse-Power/index.html">Horse Power</a>
-                <p class="description">Сайт тренажерного зала <br>(практика в универе)</p>
-            </div>
-        </div>
-
-        <div class="block">
-            <img src="thumbnails/pdl-auto.png" alt="PDL-Auto" style="width: 315px; height:200px">
-
-            <div class="data">
-                <a href="PDL-Auto/index.html">PDL-Auto</a>
-                <p class="description">Сайт автомобильного салона <br>(домашка по web)</p>
-            </div>
-        </div>
-
-        <div class="block">
-            <img src="thumbnails/clicker.png" alt="Clicker" style="width: 315px; height:200px">
-
-            <div class="data">
-                <a href="JS-projects/Clicker/index.html">Mini clicker</a>
-                <p class="description">Проект для изучения js</p>
-            </div>
-        </div>
-
-        <div class="block">
-            <img src="thumbnails/timer.png" alt="Timer" style="width: 315px; height:200px">
-
-            <div class="data">
-                <a href="JS-projects/Timer/index.html">Timer</a>
-                <p class="description">Проект для изучения js</p>
-            </div>
-        </div>
-        -->
-        <ul>
-            <li>
-                <a href="Horse-Power/index.html">Horse-Power</a>
-            </li>
-            <li>
-                <a href="PDL-Auto/index.html">PDL-Auto</a>
-            </li>
-            <li>
-                <a href="JS-projects/Clicker/index.html">Mini-clicker</a>
-            </li>
-            <li>
-                <a href="JS-projects/Timer/index.html">Timer</a>
-            </li>
-            <li>
-                <a href="JS-projects/Password-Generator/index.html">Password-Generator</a>
-            </li>
-        </ul>
+    <script src="generatorScript.js"></script>
 </body>
+
 </html>
