Change background image

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <div class="content row">
 
                 <div class="content-center">
-                    <span id="label">
-                        GiveMePass
-                    </span>
+                    <h1 id="label">GiveMePass</h1>
                 </div>
 
                 <div class="content-center">
